--- a/ADVL_Monte_Carlo_1/ADVL_Monte_Carlo_1.vbproj
+++ b/ADVL_Monte_Carlo_1/ADVL_Monte_Carlo_1.vbproj
@@ -72,7 +72,7 @@
     <GenerateManifests>true</GenerateManifests>
   </PropertyGroup>
   <PropertyGroup>
-    <SignManifests>true</SignManifests>
+    <SignManifests>false</SignManifests>
   </PropertyGroup>
   <PropertyGroup>
     <ApplicationIcon>Monte Carlo App V1.ico</ApplicationIcon>
